--- a/PyCitySchools_Challenge_starter_code.ipynb
+++ b/PyCitySchools_Challenge_starter_code.ipynb
@@ -671,7 +671,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 12. Replace the passing math percent for Thomas High School in the per_school_summary_df.\n"
+    "# Step 12. Replace the passing math percent for Thomas High School in the per_school_summary_df.\n",
+    "                           \n",
+    "                           "
    ]
   },
   {
